AdminFrontDev - fix construct 2

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <script id="qqMap" charset="utf-8"></script>
   <meta content="webkit" name="renderer">
-  <title></title>
+  <title>园易管理员端</title>
 </head>
 <body>
 <div id="app"></div>
